--- a/templates/new_index.html
+++ b/templates/new_index.html
@@ -1,13 +1,75 @@
 {% extends "bootstrap/base.html" %}
+{% block scripts %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type=text/javascript>
+function startAJAXcalls(){  
+	setTimeout( function() {
+	    getVPNClients();
+	    startAJAXcalls(); 
+	},
+	1000
+	);
+    } 
 
+
+function getVPNClients(){
+     $.ajax({
+		url: '/get_status_new',
+		data: 'json',
+		success: function(json){
+			$('#users').empty();
+			$.each(json.users,function(){
+			console.log(this);
+			$('#users').append('<tr>' 
+                +'<td>'+this['Common Name']+'</td>'
+                +'<td>'+this['Real Address']+'</td>'
+                +'<td>'+this['Virtual Address']+'</td>'
+                +'<td>'+this['Connected Since']+'</td>'
+                +'<td>'+this['Last Ref']+'</td>'
+                +'<td>'+this['Bytes Sent']+'</td>'
+                +'<td>'+this['Bytes Received']+'</td>'
+             +'</tr>');
+		});
+	}
+});}
+
+$(document).ready(startAJAXcalls());
+</script>
+{% endblock %}
 
 {% block title %}Flasky{% endblock %}
-
-
-{% block content %}
-<div class="container">
-    <div class="page-header">
-        <h1>Hello, {{ name }}!</h1> 
+{% block navbar %}
+<div class="navbar navbar-inverse" role="navigation"> 
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> 
+            <span class="sr-only">Toggle navigation</span> 
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button> 
+        </div>
+        
     </div>
 </div>
+
+{% endblock %}
+{% block content %}
+    <div class="container">
+        <table class="table table-inverse">
+            <thead>
+                <tr>
+                    <th>Common Name</th>
+                    <th>Real Address</th>
+                    <th>Virtual Address</th>
+                    <th>Connected Since</th>
+                    <th>Last Ref</th>
+                    <th>Bytes Sent</th>
+                    <th>Bytes Received</th>
+                    </tr>
+            </thead>
+            <tbody id=users>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
